qcacld-2.0: Remove WLAN_FEATURE_HOLD_RX_WAKELOCK feature
- WLAN_FEATURE_HOLD_RX_WAKELOCK feature acquires 50 ms wake lock
  for every rx data packet.
- Remove this feature such that we can avoid wake lock for every
  RX data packet.

Change-Id: I90c8441694aac5a2df029def5f8b7f5d62eee484
CRs-Fixed: 929621

--- a/drivers/staging/prima/Kconfig
+++ b/drivers/staging/prima/Kconfig
@@ -41,6 +41,10 @@ config WLAN_FEATURE_11W
 	bool "Enable the WLAN 802.11w Protected Management Frames feature"
 	default n
 
+config WLAN_FEATURE_RX_WAKELOCK
+	bool "Enable RX wake lock feature"
+	default n
+
 config QCOM_TDLS
 	bool "Enable Tunneled Direct Link Setup feature"
 	default n
