--- a/arch/arm/configs/onyx_defconfig
+++ b/arch/arm/configs/onyx_defconfig
@@ -275,6 +275,7 @@ CONFIG_PROC_DEVICETREE=y
 CONFIG_ZRAM=y
 CONFIG_ZRAM_LZ4_COMPRESS=y
 CONFIG_BLK_DEV_LOOP=y
+CONFIG_BLK_DEV_LOOP_MIN_COUNT=16
 CONFIG_BLK_DEV_RAM=y
 CONFIG_UID_STAT=y
 CONFIG_QSEECOM=y
