--- a/arch/arm/configs/onyx_defconfig
+++ b/arch/arm/configs/onyx_defconfig
@@ -20,6 +20,7 @@ CONFIG_NAMESPACES=y
 CONFIG_RELAY=y
 CONFIG_BLK_DEV_INITRD=y
 CONFIG_RD_LZMA=y
+CONFIG_RD_XZ=y
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EMBEDDED=y
 # CONFIG_PERF_EVENTS is not set
